--- a/app/views/jrbooks/index.html.erb
+++ b/app/views/jrbooks/index.html.erb
@@ -64,6 +64,8 @@
   </tbody>
 </table>
 
+<%== pagy_bootstrap_nav(@pagy) %>
+
 <br>
 
 <%= link_to 'Add New Book', new_jrbook_path, class:"btn btn-dark" %>
